--- a/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
+++ b/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
@@ -13123,5 +13123,77 @@
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
       <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
     </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/AncientAfterburnerT40</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/AncientAfterburnerT41</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/AncientAfterburnerT42</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/AncientAfterburnerT42L</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/AncientAfterburnerT43</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/AncientAfterburnerT44</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
   </Settings>
 </BlockSaveData>
