--- a/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
+++ b/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
@@ -13195,5 +13195,137 @@
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
       <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
     </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_Decoy/LargeDecoy_MetalFoam</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/SC_AR_Afflictor</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/SC_AR_Afflictor_Slanted</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/SC_AR_Aries</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/SC_AR_CataclysmicVariable</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/SC_AR_Forager</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/SC_AR_LocusGleam</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/SC_AR_Nimrod</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/SC_AR_Phaethon</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/SC_AR_Resheph</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/SC_AR_Tumult</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
   </Settings>
 </BlockSaveData>
