--- a/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
+++ b/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
@@ -13327,5 +13327,17 @@
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
       <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
     </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/Starcore_AMS_Comm_Block</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
   </Settings>
 </BlockSaveData>
