--- a/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
+++ b/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
@@ -11377,7 +11377,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11389,7 +11389,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11401,7 +11401,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11413,7 +11413,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11425,7 +11425,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11437,7 +11437,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11449,7 +11449,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11461,7 +11461,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12181,7 +12181,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12193,7 +12193,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12205,7 +12205,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12217,7 +12217,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12229,7 +12229,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12241,7 +12241,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12253,7 +12253,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12265,7 +12265,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12277,7 +12277,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12289,7 +12289,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12301,7 +12301,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12313,7 +12313,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12325,7 +12325,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12337,7 +12337,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12349,7 +12349,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12361,7 +12361,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12469,7 +12469,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12481,7 +12481,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12493,7 +12493,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12505,7 +12505,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12517,7 +12517,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12529,7 +12529,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12541,7 +12541,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12553,7 +12553,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12565,7 +12565,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12577,7 +12577,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12589,7 +12589,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12601,7 +12601,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12613,7 +12613,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12625,7 +12625,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12637,7 +12637,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -12649,7 +12649,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
